<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationForFlightActivity">

    <TextView
        android:id="@+id/bookFlightBanner"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/page_flight_booking"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/bookFlightFlightListTitle"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/list_flights"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/bookFlightListDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bookFlightListDisplay"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:gravity="top"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />


    <TextView
        android:id="@+id/bookFlightMessageDisplay"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/login_message"
        android:textColor="#f00"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bookFlightBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bookFlightByCity"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/prompt_city"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bookFlightByCityButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/bookFlightByCityButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_search_flights"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookFlightListDisplay" />

    <EditText
        android:id="@+id/bookFlightByFlightNumber"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:hint="@string/prompt_flight_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bookFlightBookingQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bookFlightBookingQuantity"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/prompt_number_of_bookings"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/bookFlightByNumberButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bookFlightByNumberButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_reserve_flight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bookFlightMessageDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bookFlightBackButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>